--- a/index.html
+++ b/index.html
@@ -3,300 +3,198 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Calculator</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Arial', sans-serif;
-        }
+    <title>Advanced Frontend Developer Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background: linear-gradient(45deg, #2c3e50, #3498db);
-        }
+<style>
+:root {
+  scroll-padding-top: 100px;
+}
+html {
+  scroll-behavior: smooth;
+}
+</style>
 
-        .calculator {
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            border-radius: 20px;
-            padding: 20px;
-            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
-            width: 100%;
-            max-width: 400px;
-        }
-
-        .display {
-            background: rgba(255, 255, 255, 0.9);
-            padding: 20px;
-            border-radius: 10px;
-            margin-bottom: 20px;
-            text-align: right;
-            font-size: 2em;
-            min-height: 60px;
-            word-wrap: break-word;
-            word-break: break-all;
-        }
-
-        .buttons {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 10px;
-        }
-
-        button {
-            padding: 20px;
-            font-size: 1.2em;
-            border: none;
-            border-radius: 10px;
-            background: rgba(255, 255, 255, 0.9);
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        button:hover {
-            background: rgba(255, 255, 255, 1);
-            transform: scale(1.05);
-        }
-
-        button:active {
-            transform: scale(0.95);
-        }
-
-        .operator {
-            background: rgba(52, 152, 219, 0.9);
-            color: white;
-        }
-
-        .operator:hover {
-            background: rgba(52, 152, 219, 1);
-        }
-
-        .equals {
-            background: rgba(46, 204, 113, 0.9);
-            color: white;
-        }
-
-        .equals:hover {
-            background: rgba(46, 204, 113, 1);
-        }
-
-        .clear {
-            background: rgba(231, 76, 60, 0.9);
-            color: white;
-        }
-
-        .clear:hover {
-            background: rgba(231, 76, 60, 1);
-        }
-
-        @media (max-width: 480px) {
-            .calculator {
-                margin: 10px;
-                padding: 15px;
-            }
-
-            button {
-                padding: 15px;
-                font-size: 1em;
-            }
-        }
-    </style>
 </head>
 <body>
-    <div class="calculator">
-        <div class="display">0</div>
-        <div class="buttons">
-            <button class="clear">C</button>
-            <button class="operator">±</button>
-            <button class="operator">%</button>
-            <button class="operator">÷</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button class="operator">×</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button class="operator">-</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button class="operator">+</button>
-            <button>0</button>
-            <button>.</button>
-            <button class="equals">=</button>
-            <button class="operator">⌫</button>
+    <nav class="nav">
+        <div class="container nav-content">
+            <h1 class="glow-text">Portfolio</h1>
+            <div class="nav-links">
+                <a href="#home" class="nav-link">Home</a>
+                <a href="#about" class="nav-link">About</a>
+                <a href="#skills" class="nav-link">Skills</a>
+                <a href="#hobbies" class="nav-link">Hobbies</a>
+                <a href="#projects" class="nav-link">Projects</a>
+                <a href="#contact" class="nav-link">Contact</a>
+            </div>
         </div>
-    </div>
+    </nav>
 
-    <script>
-        class Calculator {
-            constructor() {
-                this.display = document.querySelector('.display');
-                this.buttons = document.querySelector('.buttons');
-                this.currentValue = '0';
-                this.previousValue = null;
-                this.operation = null;
-                this.shouldResetDisplay = false;
+    <section id="home" class="hero">
+        <div class="container hero-content">
+            <h1 class="hero-title glow-text">Hi, I'm SETHU</h1>
+            <p class="hero-subtitle">Computer Science Student & Web Developer</p>
+            <button class="hover-glow">View My Projects</button>
+        </div>
+    </section>
 
-                this.initializeEventListeners();
-            }
+    <section id="about" class="about reveal">
+        <div class="container">
+            <h2 class="section-title glow-text">About Me</h2>
+            <div class="about-content">
+                <div class="about-text">
+                    <p>Hello! I'm a passionate Computer Science student with a strong focus on web development and software engineering. Currently pursuing my degree at XYZ University, I specialize in creating modern web applications and user interfaces.</p>
+                    <p>With a deep interest in technology and programming, I spend my time learning new technologies and working on exciting projects. I believe in writing clean, efficient code and creating user-friendly applications that make a difference.</p>
+                    <!--<p>I'm constantly exploring new technologies and frameworks to stay up-to-date with the latest trends in web development. My goal is to become a full-stack developer and contribute to innovative projects that push the boundaries of what's possible on the web.</p>-->
+                </div>
+            </div>
+        </div>
+    </section>
 
-            initializeEventListeners() {
-                this.buttons.addEventListener('click', (e) => {
-                    if (e.target.matches('button')) {
-                        this.handleButtonClick(e.target.textContent);
-                    }
-                });
+    <section id="skills" class="skills reveal">
+        <div class="container">
+            <h2 class="section-title glow-text">Skills & Expertise</h2>
+            <div class="skills-grid">
+                <div class="skill-item hover-glow">
+                    <h4>HTML5/CSS3</h4>
+                    <div class="skill-level" style="--level: 90%"></div>
+                </div>
+                <div class="skill-item hover-glow">
+                    <h4>JavaScript</h4>
+                    <div class="skill-level" style="--level: 85%"></div>
+                </div>
+                <div class="skill-item hover-glow">
+                    <h4>React.js</h4>
+                    <div class="skill-level" style="--level: 80%"></div>
+                </div>
+                <div class="skill-item hover-glow">
+                    <h4>Python</h4>
+                    <div class="skill-level" style="--level: 75%"></div>
+                </div>
+                <div class="skill-item hover-glow">
+                    <h4>Communication</h4>
+                    <div class="skill-level" style="--level: 95%"></div>
+                </div>
+                <div class="skill-item hover-glow">
+                    <h4>Team Leadership</h4>
+                    <div class="skill-level" style="--level: 85%"></div>
+                </div>
+                <div class="skill-item hover-glow">
+                    <h4>Problem Solving</h4>
+                    <div class="skill-level" style="--level: 90%"></div>
+                </div>
+                <div class="skill-item hover-glow">
+                    <h4>Project Management</h4>
+                    <div class="skill-level" style="--level: 80%"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+                
 
-                document.addEventListener('keydown', (e) => {
-                    this.handleKeyboardInput(e);
-                });
-            }
+    <section id="hobbies" class="hobbies reveal">
+        <div class="container">
+            <h2 class="section-title glow-text">Hobbies & Interests</h2>
+            <div class="hobbies-grid">
+                <div class="hobby-item hover-glow">
+                    <h3>💻 Coding</h3>
+                    <p>Building personal projects and learning new technologies</p>
+                </div>
+                <div class="hobby-item hover-glow">
+                    <h3>🗣️ Public Speaking</h3>
+                    <p>Participating in debates and tech presentations</p>
+                </div>
+                <div class="hobby-item hover-glow">
+                    <h3>✍️ Technical Writing</h3>
+                    <p>Writing tech blogs and documentation</p>
+                </div>
+                <div class="hobby-item hover-glow">
+                    <h3>👥 Community Building</h3>
+                    <p>Active participation in tech communities and events</p>
+                </div>
+                <div class="hobby-item hover-glow">
+                    <h3>📚 Reading</h3>
+                    <p>Technical books and self-improvement</p>
+                </div>
+                <!--<div class="hobby-item hover-glow">
+                    <h3>🎮 Gaming</h3>
+                    <p>Strategy games and team-based competitions</p>
+                </div>
+                <div class="hobby-item hover-glow">
+                    <h3>🗨️ Communication</h3>
+                    <p>Engaging in meaningful conversations and networking</p>
+                </div>-->
+            </div>
+        </div>
+    </section>
 
-            handleButtonClick(value) {
-                if (this.isNumber(value)) {
-                    this.handleNumber(value);
-                } else if (value === '.') {
-                    this.handleDecimal();
-                } else if (value === 'C') {
-                    this.clear();
-                } else if (value === '±') {
-                    this.toggleSign();
-                } else if (value === '%') {
-                    this.handlePercentage();
-                } else if (value === '⌫') {
-                    this.handleBackspace();
-                } else if (value === '=') {
-                    this.calculate();
-                } else {
-                    this.handleOperator(value);
-                }
-                this.updateDisplay();
-            }
+    <section id="projects" class="projects reveal">
+        <div class="container">
+            <h2 class="section-title glow-text">Featured Projects</h2>
+            <div class="projects-grid">
+                <div class="project-card hover-glow">
+                    <h3>Student Management System</h3>
+                    <p>A comprehensive system for managing student records, attendance, and grades.</p>
+                    <div class="technologies">
+                        <span class="tech-tag">React</span>
+                        <span class="tech-tag">Node.js</span>
+                        <span class="tech-tag">MongoDB</span>
+                    </div>
+                </div>
+                <div class="project-card hover-glow">
+                    <h3>Weather Dashboard</h3>
+                    <p>Real-time weather application with location tracking and forecast visualization.</p>
+                    <div class="technologies">
+                        <span class="tech-tag">JavaScript</span>
+                        <span class="tech-tag">Weather API</span>
+                        <span class="tech-tag">Chart.js</span>
+                    </div>
+                </div>
+                <div class="project-card hover-glow">
+                    <h3>Task Manager</h3>
+                    <p>A full-stack task management application with user authentication and real-time updates.</p>
+                    <div class="technologies">
+                        <span class="tech-tag">React</span>
+                        <span class="tech-tag">Firebase</span>
+                        <span class="tech-tag">Material-UI</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-            handleKeyboardInput(e) {
-                if (e.key >= '0' && e.key <= '9') {
-                    this.handleNumber(e.key);
-                } else if (e.key === '.') {
-                    this.handleDecimal();
-                } else if (e.key === 'Enter') {
-                    this.calculate();
-                    this.operation = null;  // Clear the operation after calculation
-                } else if (e.key === 'Backspace') {
-                    this.handleBackspace();
-                } else if (e.key === 'Escape' || e.key === 'Delete') {
-                    this.clear();
-                } else if (['+', '-', '*', '/'].includes(e.key)) {
-                    this.handleOperator(e.key === '*' ? '×' : e.key === '/' ? '÷' : e.key);
-                }
-                this.updateDisplay();
-            }
-
-            isNumber(value) {
-                return !isNaN(value) && value !== ' ';
-            }
-
-            handleNumber(num) {
-                if (this.shouldResetDisplay) {
-                    this.currentValue = num;
-                    this.shouldResetDisplay = false;
-                } else {
-                    this.currentValue = this.currentValue === '0' ? num : this.currentValue + num;
-                }
-            }
-
-            handleDecimal() {
-                if (!this.currentValue.includes('.')) {
-                    this.currentValue += '.';
-                }
-            }
-
-            handleOperator(op) {
-                if (this.previousValue === null) {
-                    this.previousValue = parseFloat(this.currentValue);
-                    this.operation = op;
-                    this.shouldResetDisplay = true;
-                } else {
-                    this.calculate();
-                    this.operation = op;
-                    this.shouldResetDisplay = true;
-                }
-            }
-
-            calculate() {
-                if (this.operation === null) return;
-
-                const current = parseFloat(this.currentValue);
-                const previous = parseFloat(this.previousValue);
-                let result;
-
-                try {
-                    switch (this.operation) {
-                        case '+':
-                            result = previous + current;
-                            break;
-                        case '-':
-                            result = previous - current;
-                            break;
-                        case '×':
-                            result = previous * current;
-                            break;
-                        case '÷':
-                            if (current === 0) throw new Error('Division by zero');
-                            result = previous / current;
-                            break;
-                    }
-
-                    // Round to 8 decimal places to avoid floating point issues
-                    result = Math.round(result * 100000000) / 100000000;
+    <section id="contact" class="contact reveal">
+        <div class="container">
+            <h2 class="section-title glow-text">Get In Touch</h2>
+            <div class="contact-content">
+                <div class="contact-info">
+                    <div class="contact-item hover-glow">
+                        <h3>📧 Email</h3>
+                        <p>sethu21@gmail.com</p>
+                    </div>
+                    <div class="contact-item hover-glow">
+                        <h3>📱 Phone</h3>
+                        <p>+91 9876543210</p>
+                    </div>
+                    <div class="contact-item hover-glow">
+                        <h3>📍 Location</h3>
+                        <p>HOSUR, TAMILNADU, INDIA</p>
+                    </div>
                     
-                    this.currentValue = result.toString();
-                    this.previousValue = result;
-                    this.shouldResetDisplay = true;
-                } catch (error) {
-                    this.currentValue = 'Error';
-                    this.previousValue = null;
-                    this.operation = null;
-                    this.shouldResetDisplay = true;
-                }
-            }
+                </div>
+                <form class="contact-form hover-glow">
+                    <input type="text" placeholder="Name" required>
+                    <input type="email" placeholder="Email" required>
+                    <textarea placeholder="Message" required></textarea>
+                    <button type="submit" class="hover-glow">Send Message</button>
+                </form>
+            </div>
+        </div>
+    </section>
 
-            clear() {
-                this.currentValue = '0';
-                this.previousValue = null;
-                this.operation = null;
-                this.shouldResetDisplay = false;
-            }
-
-            toggleSign() {
-                this.currentValue = (parseFloat(this.currentValue) * -1).toString();
-            }
-
-            handlePercentage() {
-                this.currentValue = (parseFloat(this.currentValue) / 100).toString();
-            }
-
-            handleBackspace() {
-                if (this.currentValue.length > 1) {
-                    this.currentValue = this.currentValue.slice(0, -1);
-                } else {
-                    this.currentValue = '0';
-                }
-            }
-
-            updateDisplay() {
-                this.display.textContent = this.currentValue;
-            }
-        }
-
-        // Initialize the calculator
-        const calculator = new Calculator();
-    </script>
+    <script src="particles.js"></script>
+    <script src="main.js"></script>
 </body>
 </html> 
